[NFC] Add "-XX:+EnableDynamicAgentLoading" to debug run configurations